# jx-ops-agent-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: incident-report.md
docs/: aoi-flicker-region-churn.md  trap-warp-route-validation.md
evidence/: boot.txt  bots.txt  environment.txt  incident.txt  install.txt  routes.txt  smoke-summary.txt  tests.txt
scripts/: render_route_overlay.py  render_smoke_evidence.py
src/jxops/: __init__.py  __main__.py  boot.py  bots.py  cli.py  incident.py  routes.py
tests/: test_boot.py  test_bots.py  test_incident.py  test_routes.py
