[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jx-ops-agent-demo"
version = "0.1.0"
description = "A clean-room sandbox demonstrating agent-assisted operations for a legacy MMO fleet."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "JX Ops Agent Build Week Team"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
jxops = "jxops.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

